--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "jquery": "^3.6.0",
     "vue": "^2.6.12",
+    "vue-confetti": "^2.2.1",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12"
   },
