--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue": "^2.6.12",
     "vue-confetti": "^2.2.1",
     "vue-loader": "^15.9.6",
+    "vue-spinner": "^1.0.4",
     "vue-template-compiler": "^2.6.12"
   },
   "version": "0.1.0",
