--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.1",
     "jquery": "^3.6.0",
+    "swiper": "5.3.1",
     "vue": "^2.6.12",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-confetti": "^2.2.1",
     "vue-loader": "^15.9.6",
     "vue-spinner": "^1.0.4",
