--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
+    "actioncable": "^5.2.6",
     "axios": "^0.21.1",
     "jquery": "^3.6.0",
     "swiper": "5.3.1",
