--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,7 @@ test:
 #
 production:
   <<: *default
-  database: match_app_production
-  username: match_app
-  password: <%= ENV['MATCH_APP_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
+  # database: match_app_production
+  # username: match_app
+  # password: <%= ENV['MATCH_APP_DATABASE_PASSWORD'] %>
